# pixel-ai

./: .gitignore  Cargo.toml  OMNI.md  README.md  build.sh  config.yaml  pixel.ai.html  pixel.ppm  test_sigmoid.py
.cargo/: config.toml
src/: gpu.rs  gpu_webgl2.rs  lib.rs  main.rs
src/shaders/: fullscreen.vert  hidden.frag  output.frag
web/: app.js  body.html  index.html  style.css  viz.js
